--- a/media.css
+++ b/media.css
@@ -1,12 +1,12 @@
 @media screen and (max-width: 1400px) {
   #header-nav{
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
-  width: 50%;
+  width: 60%;
   z-index: 1000;
   background-color: white;
-  gap: 10px;
+  gap: 5px;
   }
 
   #profile {
@@ -29,7 +29,7 @@
 
   .round{
     margin-left: 0;
-    margin-top: 5rem;
+    margin-top: 3rem;
   }
 }
 
